add deleted adopter
